[package]
name = "flechasdb-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark for flechasdb"
authors = ["Kikuo Emoto <kemoto@codemonger.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
clap = { version = "4.4", features = ["derive"] }
flechasdb = { path = "../flechasdb" }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["rt", "full"] }
